; ModuleID = '/home/carl/AnghaBench/rofi/test/extr_theme-parser-test.c_rofi_view_get_current_monitor.c'
source_filename = "/home/carl/AnghaBench/rofi/test/extr_theme-parser-test.c_rofi_view_get_current_monitor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rofi_view_get_current_monitor(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %2
  %8 = load i32*, i32** %3, align 8
  store i32 1920, i32* %8, align 4
  br label %9

9:                                                ; preds = %7, %2
  %10 = load i32*, i32** %4, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = load i32*, i32** %4, align 8
  store i32 1080, i32* %13, align 4
  br label %14

14:                                               ; preds = %12, %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
